added remote config-server repo, clean up

--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -23,7 +23,7 @@ spring:
         predicates:
         - Path=/accounts/**
         filters:
-        - RewritePath=/accounts/(?<path>.*), /$\{path}
+        - RewritePath=/accounts/(<path>.*), /$\{path}
 
 eureka:
   client:
