--- a/config-server/pom.xml
+++ b/config-server/pom.xml
@@ -8,7 +8,7 @@
     <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>config--server</name>
+    <name>config-server</name>
     <description>config-server</description>
 
     <parent>
@@ -30,7 +30,6 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-config-server</artifactId>
         </dependency>
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
@@ -58,6 +57,4 @@
             </plugin>
         </plugins>
     </build>
-
-
 </project>
