--- a/api-gateway/src/main/resources/bootstrap.yml
+++ b/api-gateway/src/main/resources/bootstrap.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: report-service
+    name: api-gateway-service
   cloud:
     config:
       uri: http://config-server:18888
