--- a/registration-service/pom.xml
+++ b/registration-service/pom.xml
@@ -34,6 +34,10 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-config</artifactId>
+        </dependency>
         <!-- test scope -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -62,5 +66,4 @@
             </plugin>
         </plugins>
     </build>
-
 </project>
