--- a/registration-service/src/main/resources/bootstrap.yml
+++ b/registration-service/src/main/resources/bootstrap.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: account-service
+    name: registration-service
   cloud:
     config:
       uri: http://config-server:18888
