--- a/api-gateway/Dockerfile
+++ b/api-gateway/Dockerfile
@@ -4,4 +4,4 @@ VOLUME /tmp
 EXPOSE 12345
 ARG JAR_FILE=target/api-gateway-0.0.1-SNAPSHOT.jar
 ADD ${JAR_FILE} api-gateway.jar
-ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-jar","/api-gateway.jar"]
+ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-Xmx32m","-Xss256k","-jar","/api-gateway.jar"]
