--- a/config-server/Dockerfile
+++ b/config-server/Dockerfile
@@ -4,4 +4,4 @@ VOLUME /tmp
 EXPOSE 18888
 ARG JAR_FILE=target/config-server-0.0.1-SNAPSHOT.jar
 ADD ${JAR_FILE} config-server.jar
-ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-jar","/config-server.jar"]
+ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-Xmx32m","-Xss256k","-jar","/config-server.jar"]
