move 'api-gateway' and 'registration-service' configuration to config server

--- a/config-server/src/main/resources/application.yml
+++ b/config-server/src/main/resources/application.yml
@@ -9,6 +9,6 @@ spring:
       server:
         git:
           # local repo
-          # uri: file:///home/raf/IdeaProjects/cloud-config
+          uri: file:///home/raf/IdeaProjects/spring-cloud-microservice-sample-config
           # remote repo
-          uri: https://github.com/rtatol/spring-cloud-microservice-sample-config.git
+          #uri: https://github.com/rtatol/spring-cloud-microservice-sample-config.git
